--- a/index.html
+++ b/index.html
@@ -75,16 +75,27 @@
 
     </section>
 
-    <section id="right">
+    <section id="right_up">
 
         <nav class="vertical">
             <h1>Address</h1>
             <ul>
-                <li><a href="#">Listing 2048</a></li>
-                <li><a href="#">414 Mandel Road</a></li>
-                <li><a href="#">Owatonna, MN 55060</a></li>
+                <li>Listing 2048</li>
+                <li>414 Mandel Road</li>
+                <li>Owatonna, MN 55060</li>
+            </ul>
+        </section>  
 
-    </section>
+     <section id="right_down">
+
+            <nav class="vertical">
+                <ul>
+                    <li>List Price: $412,800</li>
+                    <li>Square Feet: 3,300</li>
+                    <li>Bedrooms: 4</li>
+                    <li>Baths: 2-1/2</li>
+                </ul>
+            </section>  
 
     <footer>
         Address: Listing 2048 414 Mandel Road Owatonna, MN 55060
