--- a/index.html
+++ b/index.html
@@ -84,18 +84,47 @@
                 <li>414 Mandel Road</li>
                 <li>Owatonna, MN 55060</li>
             </ul>
-        </section>  
+    </section>
 
-     <section id="right_down">
+    <section id="right_down">
 
-            <nav class="vertical">
-                <ul>
-                    <li>List Price: $412,800</li>
-                    <li>Square Feet: 3,300</li>
-                    <li>Bedrooms: 4</li>
-                    <li>Baths: 2-1/2</li>
-                </ul>
-            </section>  
+        <nav class="vertical">
+            <h1>Listing Description</h1>
+            <ul>
+                <li>List Price: $412,800</li>
+                <li>Square Feet: 3,300</li>
+                <li>Bedrooms: 4</li>
+                <li>Baths: 2-1/2</li>
+            </ul>
+    </section>
+
+    <section>
+
+        <div class="grid">
+
+            <div class="photo"> Front View <img src="br_photo1.png" alt=""> </div>
+
+            <div class="photo"> Rear View <img src="br_photo2.png" alt=""> </div>
+
+            <div class="photo"> Side View <img src="br_photo3.png" alt=""> </div>
+
+            <div class="photo"> Dining Room <img src="br_photo4.png" alt=""> </div>
+
+            <div class="photo"> Kitchen <img src="br_photo5.png" alt=""> </div>
+
+            <div class="photo"> Living Room <img src="br_photo6.png" alt=""> </div>
+
+            <div class="photo"> Bedroom 1 <img src="br_photo7.png" alt=""> </div>
+
+            <div class="photo"> Bedroom 2 <img src="br_photo8.png" alt=""> </div>
+
+            <div class="photo"> Bedroom 3 <img src="br_photo9.png" alt=""> </div>
+
+
+
+
+    </section>
+
 
     <footer>
         Address: Listing 2048 414 Mandel Road Owatonna, MN 55060
